--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,6 @@ backend:
     repo: diogorodrigues/iceberg-gatsby-multilang
     branch: master
     site_domain: https://iceberg-gatsby-multilang.netlify.com/
-    
 
 publish_mode: editorial_workflow
 media_folder: 'static/assets/img'
@@ -67,7 +66,7 @@ collections:
       folder: 'blog' # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
-      extension: 'pt.md'
+      extension: 'jp.md'
       format: frontmatter
       fields: # The fields for each document, usually in front matter
           - { label: 'Title', name: 'title', widget: 'string' }
@@ -135,7 +134,7 @@ collections:
       folder: 'pages' # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
-      extension: 'pt.md'
+      extension: 'jp.md'
       format: frontmatter
       fields: # The fields for each document, usually in front matter
           - { label: 'Title', name: 'title', widget: 'string' }
