--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -60,9 +60,9 @@ collections:
             }
           - { label: 'Body', name: 'body', widget: 'markdown' }
 
-    #Posts (Portuguese)
-    - name: 'posts-pt' # Used in routes, e.g., /admin/collections/blog
-      label: 'Posts (Portuguese)' # Used in the UI
+    #Posts (Japanese)
+    - name: 'posts-jp' # Used in routes, e.g., /admin/collections/blog
+      label: 'Posts (Japanese)' # Used in the UI
       folder: 'blog' # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: '{{year}}-{{month}}-{{day}}-{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
@@ -128,9 +128,9 @@ collections:
           - { label: 'isPage', name: 'page', widget: 'hidden', default: true }
           - { label: 'Body', name: 'body', widget: 'markdown' }
 
-    #Pages (Portuguese)
-    - name: 'pages-pt' # Used in routes, e.g., /admin/collections/blog
-      label: 'Pages (Portuguese)' # Used in the UI
+    #Pages (Japanese)
+    - name: 'pages-jp' # Used in routes, e.g., /admin/collections/blog
+      label: 'Pages (Japanese)' # Used in the UI
       folder: 'pages' # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
