--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.6.27",
     "gatsby-transformer-sharp": "^2.2.20",
+    "gatsby-remark-katex": "~4",
+    "katex": "^0.16.2",
     "lazysizes": "^5.1.2",
     "netlify-cms-app": "^2.9.7",
     "prismjs": "^1.17.1",
